Added fetchAllMenuItemsByCategory method.